fix right gap in mobile

--- a/extensions/ArchLinux/modules/archnavbar/responsive.less
+++ b/extensions/ArchLinux/modules/archnavbar/responsive.less
@@ -26,4 +26,16 @@
   div.title-shortlink-container {
     display: none;
   }
+  
+  div.read-more-container {
+    margin-left: 0 !important;
+  }
+  
+  div.vectorMenu h3#p-cactions-label {
+    margin-right: 0 !important;
+  }
+  
+  div.vectorMenu div.menu {
+    right: 0 !important;
+  }
 }
